canvis realitzats a index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
 </head>
-
+  <h1>Titol de la pagina</h1>
 <body>
-  <p>Esta página web es una página HTML válida.</p>
+  <ul>
+    <li>primer article<li>
+    <li>Segon article</li>
+    <li>tercer article</li>
+    <li>quart article</li>
+  </ul>
 </body>
+<footer>
+<p>coses maques</p>
+</footer>
 </html>
